# toolbox

./: README.md
Qt_cam_backup/: AbstractDataSource.cpp  AbstractDataSource.h  AppSettings.cpp  AppSettings.h  DataStorageConfig.cpp  DataStorageConfig.h  DataStorageConfig.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  PINSelectionWidget.cpp  PINSelectionWidget.h  PINSelectionWidget.ui  Qt_cam_backup.pro  SourceConfigWidget.cpp  SourceConfigWidget.h  SourceConfigWidget.ui  main.cpp
Qt_cam_backup/android/: AndroidManifest.xml
Qt_cam_backup/clc/: clc_aes.c  clc_aes.h  clc_bytes.h  clc_encrypt.c  clc_encrypt.h
Qt_cam_backup/dataSinks/: AbstractDataSink.cpp  AbstractDataSink.h  DataSinks.cpp  DataSinks.h  DebugSink.cpp  DebugSink.h  FtpSink.cpp  (+1 more)
SYCL_classes/: exercise_1_ostream_from_gpu.cpp  exercise_2_custom_device_selector.cpp  exercise_3_usm_selector.cpp  exercise_4_event_dependencies.cpp  exercise_5_multiple_devices.cpp  exercise_6_in_order_queue.cpp  exercise_7_disable_buffer_writeback.cpp  exercise_8_convolution_optimizations.cpp
Templates/: CMakeLists.txt  Makefile  header_file.h  main.c  qt_main.cpp
avw/: media_source.hpp  pixel_format.hpp
btree/: Makefile  btree.c  btree.h  main.c
clc/: Makefile  README.txt  clc_bytes.c  clc_bytes.h  clc_encrypt_16.c  clc_encrypt_16.h  clc_encrypt_24.c  clc_encrypt_24.h  clc_encrypt_32.c  clc_encrypt_32.h  clc_encrypt_base.c  clc_encrypt_base.h  clc_error.c  clc_error.h  clc_file.c  clc_file.h  clc_md5.c  clc_md5.h  clc_sha1.c  clc_sha1.h  main.c
cmsg/: cmsg.hpp  format_code.sh  main.cpp  sanitize.sh  static_analysis.sh  test.sh
cpp_enum_utils_generator/: README.md
dploader/: dploader.c  dploader.h  main.c  so_loader.hpp
dpstring/: dpfileio.c  dpfileio.h  dpstring.c  dpstring.h  dpstringlist.c  dpstringlist.h  main.c
dvz/: dvz.pro  dvz_context.c  dvz_context.h  dvz_renderer.c  dvz_renderer.h  main.c
gpu/CUQt/: CMakeLists.txt
gpu/CUQt/include/: cuqt.h  cuqtdevice.h  cuqtevent.h  cuqtgraphics.h  cuqtmemory.h  cuqtstream.h
gpu/CUQt/src/: cuqt.cpp  cuqtdebugoperators.cpp  cuqtdevice.cpp  cuqtevent.cpp  cuqtgraphics.cpp  cuqtmemory.cpp  cuqtstream.cpp
gpu/CUQt/tests/: CMakeLists.txt  main.cpp  testbase.h  testdevice.cpp  testdevice.h  testdevicememory.cpp  testdevicememory.h  teststream.cpp  teststream.h  testtextures.cpp  testtextures.h
hough_transform_opengl/: DisplayWindow.h  MainWindow.cpp  MainWindow.ui  MeshRenderBuffer.h  README.txt  qt_opengl.pro
inips/: Makefile  inips.c  inips.h  main.c  test.ini
linux_character_driver_test/: Makefile  fakechardriver.c
linux_gpio_driver_sysfs/: Makefile  README.md  gpio_sysfs_driver.c  kernel_patch_device_tree_for_gpiosysfs.diff
linux_on_beglebone_black/: building_beaglebone.txt  uEnv.txt  uEnv_with_dt_overlays.txt
linux_platform_device_driver_sysfs/: Makefile  README  fakedrv_common.h  fakeplatformdevice.c  fakeplatformdriver.c
linux_platform_device_manual_insertion/: fakeplatformdriver.c
linux_platform_driver_device_tree/: Makefile  README  fakedrv_common.h  fakeplatformdriver.c  linux_kernel_patch_add_dt.diff  uEnv.txt
math/: OptSieve.c  PrimesDb.hpp  ctml.cpp  math_utils.hpp
mempool_test/: Makefile  mempool.c  mempool.h  test.c
modules-ts-test-clang/: CMakeLists.txt  build_with_clang.bat  clang_win32.bat  main.cpp  module_implementation.cpp  module_interface.cppm  modules_experimental.cmake
opencl_rt/: opencl_rt.hpp
p2p_sync/: README.md  gcommandserializer.cpp  gcommandserializer.h  gserver.cpp  gserver.h  gstdincommandparser.cpp  gstdincommandparser.h  gstdinlistener.cpp  gstdinlistener.h  main.cpp  remote_git.pro
shell/: coverage_report.sh  gcc_run_tests.sh  gcc_test_gen_preamble.sh  gen_supp_file.sh  vi_commands.txt  xorg.conf
stacktool/: conf.json  stacktool.py
thpool/: test.c  thpool.c  thpool.h
waitCondWin32/: main.cpp
(+101 files in other folders)
